Assignment 4: Hook up the main interface controllers

--- a/2013 Winter/SPoT/SPoT/Interfaces/PhotoBrowsing.storyboard
+++ b/2013 Winter/SPoT/SPoT/Interfaces/PhotoBrowsing.storyboard
@@ -13,11 +13,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="plP-mn-AeX" detailTextLabel="nAN-rU-05v" style="IBUITableViewCellStyleSubtitle" id="ASt-gK-xiI">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="TagName" textLabel="plP-mn-AeX" detailTextLabel="nAN-rU-05v" style="IBUITableViewCellStyleSubtitle" id="ASt-gK-xiI">
                                 <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="ASt-gK-xiI" id="UxD-C1-uY7">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="plP-mn-AeX">
@@ -36,6 +36,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="SYd-wO-Lhx" kind="push" identifier="ShowImagesForTag" id="oau-WD-iB8"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -58,11 +61,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="OMq-C3-vrB" detailTextLabel="RBb-gd-tl8" style="IBUITableViewCellStyleSubtitle" id="OfP-3v-tlt">
-                                <rect key="frame" x="0.0" y="22" width="320" height="44"/>
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ImageName" textLabel="OMq-C3-vrB" detailTextLabel="RBb-gd-tl8" style="IBUITableViewCellStyleSubtitle" id="OfP-3v-tlt">
+                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="OfP-3v-tlt" id="N1K-hZ-6BX">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="OMq-C3-vrB">
@@ -81,6 +84,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="jpk-tx-zik" kind="push" identifier="" id="PfF-ga-fVQ"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -88,6 +94,7 @@
                             <outlet property="delegate" destination="SYd-wO-Lhx" id="El0-1D-PhM"/>
                         </connections>
                     </tableView>
+                    <navigationItem key="navigationItem" id="Nr8-tZ-QRn"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="h4k-dc-TBM" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
@@ -104,12 +111,22 @@
                     <view key="view" contentMode="scaleToFill" id="HBh-2N-N2f">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yGG-9i-QXj">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
+                    <navigationItem key="navigationItem" id="PKb-UE-cJ6"/>
+                    <connections>
+                        <outlet property="imageviewer" destination="yGG-9i-QXj" id="vcC-UC-zwF"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OKi-U0-Acr" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3256" y="-3520"/>
+            <point key="canvasLocation" x="-3110" y="-3141"/>
         </scene>
         <!--Image List View Controller-->
         <scene sceneID="zHK-6G-dJ5">
@@ -120,11 +137,11 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" textLabel="py8-hH-ZfN" detailTextLabel="LD1-Z4-JN6" style="IBUITableViewCellStyleSubtitle" id="yF0-75-tWB">
+                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" accessoryType="disclosureIndicator" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ImageName" textLabel="py8-hH-ZfN" detailTextLabel="LD1-Z4-JN6" style="IBUITableViewCellStyleSubtitle" id="yF0-75-tWB">
                                 <rect key="frame" x="0.0" y="86" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="yF0-75-tWB" id="EM5-Jv-mUA">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="287" height="43"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="left" text="Title" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="py8-hH-ZfN">
@@ -143,6 +160,9 @@
                                         </label>
                                     </subviews>
                                 </tableViewCellContentView>
+                                <connections>
+                                    <segue destination="jpk-tx-zik" kind="push" id="1Ql-5q-0O3"/>
+                                </connections>
                             </tableViewCell>
                         </prototypes>
                         <connections>
@@ -153,24 +173,6 @@
                     <navigationItem key="navigationItem" id="JdV-wY-Lda"/>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="um1-YG-EWj" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-4068" y="-2754"/>
-        </scene>
-        <!--Image Detail View Controller-->
-        <scene sceneID="aUf-KY-xhI">
-            <objects>
-                <viewController id="Mf8-ZW-q4d" customClass="ImageDetailViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="lSz-EH-91W"/>
-                        <viewControllerLayoutGuide type="bottom" id="HI0-VX-mGs"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="skg-PF-UR8">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6Bp-Ya-SDN" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-3654" y="-2754"/>
         </scene>
@@ -197,7 +199,7 @@
         <scene sceneID="YkD-w7-BbP">
             <objects>
                 <tabBarController definesPresentationContext="YES" id="zUb-dC-knG" sceneMemberID="viewController">
-                    <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <nil key="simulatedBottomBarMetrics"/>
                     <tabBar key="tabBar" contentMode="scaleToFill" id="cOk-nk-feH">
                         <rect key="frame" x="129" y="330" width="163" height="49"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
@@ -237,4 +239,7 @@
         <simulatedOrientationMetrics key="orientation"/>
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
+    <inferredMetricsTieBreakers>
+        <segue reference="1Ql-5q-0O3"/>
+    </inferredMetricsTieBreakers>
 </document>
