Assignment 4: Refactor names of the use cases classes

--- a/2013 Winter/SPoT/SPoT/Interfaces/PhotoBrowsing.storyboard
+++ b/2013 Winter/SPoT/SPoT/Interfaces/PhotoBrowsing.storyboard
@@ -240,6 +240,6 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="1Ql-5q-0O3"/>
+        <segue reference="PfF-ga-fVQ"/>
     </inferredMetricsTieBreakers>
 </document>
