--- a/2013 Winter/SPoT/SPoT/Interfaces/Screens/PhotoBrowsing.storyboard
+++ b/2013 Winter/SPoT/SPoT/Interfaces/Screens/PhotoBrowsing.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13A603" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="zUb-dC-knG">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3746"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
     </dependencies>
     <scenes>
         <!--Tag List View Controller-->
@@ -113,7 +113,7 @@
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yGG-9i-QXj">
-                                <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                                <rect key="frame" x="0.0" y="64" width="320" height="368"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </scrollView>
                         </subviews>
@@ -121,7 +121,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="PKb-UE-cJ6"/>
                     <connections>
-                        <outlet property="imageviewer" destination="yGG-9i-QXj" id="vcC-UC-zwF"/>
+                        <outlet property="scrollView" destination="yGG-9i-QXj" id="fJn-ah-Apx"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OKi-U0-Acr" userLabel="First Responder" sceneMemberID="firstResponder"/>
