--- a/2013 Winter/SPoT/SPoT/Interfaces/Screens/PhotoBrowsing.storyboard
+++ b/2013 Winter/SPoT/SPoT/Interfaces/Screens/PhotoBrowsing.storyboard
@@ -112,12 +112,18 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="yGG-9i-QXj">
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yGG-9i-QXj">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="yGG-9i-QXj" firstAttribute="top" secondItem="HBh-2N-N2f" secondAttribute="top" id="5NI-F5-43d"/>
+                            <constraint firstItem="yGG-9i-QXj" firstAttribute="leading" secondItem="HBh-2N-N2f" secondAttribute="leading" id="bQ5-RM-HL8"/>
+                            <constraint firstAttribute="bottom" secondItem="yGG-9i-QXj" secondAttribute="bottom" id="bgg-1W-4Tv"/>
+                            <constraint firstAttribute="trailing" secondItem="yGG-9i-QXj" secondAttribute="trailing" id="xRi-3P-qu6"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="PKb-UE-cJ6"/>
                     <connections>
