Assignment 4: Copy and adjust interface for iPad

--- a/2013 Winter/SPoT/SPoT/Interfaces/Screens/iPhonePhotoBrowsing.storyboard
+++ b/2013 Winter/SPoT/SPoT/Interfaces/Screens/iPhonePhotoBrowsing.storyboard
@@ -246,6 +246,6 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
-        <segue reference="PfF-ga-fVQ"/>
+        <segue reference="1Ql-5q-0O3"/>
     </inferredMetricsTieBreakers>
 </document>
